# feane-fast_food

./: README.md  pyproject.toml
core/: settings.py  urls.py
foods/: urls.py  views.py
templates/: about.html  base.html  book.html  index.html  menu.html
